Bug 81820 - [945GM SNA] rotation related issue (regression, bisected)
Summary: [945GM SNA] rotation related issue (regression, bisected)
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-27 21:59 UTC by Dirk Griesbach
Modified: 2014-07-30 05:59 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
screenshot of i3lock failing to hide the whole desktop (278.88 KB, image/jpeg)
2014-07-27 22:01 UTC, Dirk Griesbach
no flags Details
Xorg.0.log (29.23 KB, text/plain)
2014-07-27 22:02 UTC, Dirk Griesbach
no flags Details
xrandr --verbose (rotated screen) (6.25 KB, text/plain)
2014-07-27 22:02 UTC, Dirk Griesbach
no flags Details
xpdyinfo (rotated screen) (30.66 KB, text/plain)
2014-07-27 22:03 UTC, Dirk Griesbach
no flags Details
xorg.conf (994 bytes, text/plain)
2014-07-27 22:05 UTC, Dirk Griesbach
no flags Details
Fix clear shortcut in CRTC redisplay (2.82 KB, patch)
2014-07-28 20:18 UTC, Chris Wilson
no flags Details | Splinter Review
window border glitch (4.09 KB, image/jpeg)
2014-07-29 08:16 UTC, Dirk Griesbach
no flags Details

Description Dirk Griesbach 2014-07-27 21:59:39 UTC
When using i3lock (http://i3wm.org/i3lock/) and intel-video SNA (currently 2.99.914) in rotated setup i3lock does not cover the whole rotated screen so parts of the desktop are visible. The black striped yellow background in the attached screenshot should not be visible as it is the desktop background image and occours at 1024 pixels. This problem does not occour with UXA.

git bisect points to:
---
d3ccb3f3b2a3cb4c8b51d58d185dd10b85e025eb is the first bad commit
commit d3ccb3f3b2a3cb4c8b51d58d185dd10b85e025eb
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Jul 4 12:39:01 2014 +0100

    sna: Convert a clear tile into a solid fill
    
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

:040000 040000 27f9b3574bce9963842c67d7e46ef32ae3930da3 691647db9421f22e92bc49fc822dcb3909ba89ac M      src
---

x86_32 Linux 3.15.6

VGA-compatible devices on PCI bus:
----------------------------------
00:02.0 VGA compatible controller [0300]: Intel Corporation Mobile 945GM/GMS, 943/940GML Express Integrated Graphics Controller [8086:27a2] (rev 03)

Versions of packages xserver-xorg-video-intel depends on:
ii  libc6                                  2.19-7
ii  libdrm-intel1                          2.4.54-1
ii  libdrm2                                2.4.54-1
ii  libpciaccess0                          0.13.2-3
ii  libpixman-1-0                          0.32.6-1
ii  libudev1                               208-6
ii  libx11-6                               2:1.6.2-2
ii  libx11-xcb1                            2:1.6.2-2
ii  libxcb-dri2-0                          1.10-3
ii  libxcb-dri3-0                          1.10-3
ii  libxcb-sync1                           1.10-3
ii  libxcb-util0                           0.3.8-2
ii  libxcb1                                1.10-3
ii  libxcursor1                            1:1.1.14-1
ii  libxdamage1                            1:1.1.4-2
ii  libxext6                               2:1.3.2-1
ii  libxfixes3                             1:5.0.1-2
ii  libxinerama1                           2:1.1.3-1
ii  libxrandr2                             2:1.4.2-1
ii  libxrender1                            1:0.9.8-1
ii  libxshmfence1                          1.1-3
ii  libxtst6                               2:1.2.2-1
ii  libxv1                                 2:1.0.10-1
ii  libxvmc1                               2:1.0.8-2
ii  xserver-xorg-core [xorg-video-abi-18]  2:1.16.0-1
Comment 1 Dirk Griesbach 2014-07-27 22:01:01 UTC
Created attachment 103562 [details]
screenshot of i3lock failing to hide the whole desktop
Comment 2 Dirk Griesbach 2014-07-27 22:02:05 UTC
Created attachment 103563 [details]
Xorg.0.log
Comment 3 Dirk Griesbach 2014-07-27 22:02:56 UTC
Created attachment 103564 [details]
xrandr --verbose (rotated screen)
Comment 4 Dirk Griesbach 2014-07-27 22:03:29 UTC
Created attachment 103565 [details]
xpdyinfo (rotated screen)
Comment 5 Dirk Griesbach 2014-07-27 22:05:15 UTC
Created attachment 103566 [details]
xorg.conf
Comment 6 Chris Wilson 2014-07-28 19:24:53 UTC
The patch itself presumably triggers a bug in the other code path (itself would not cause that bug). Did you manually confirm the bisect, preferably by reverting that patch on master?
Comment 7 Chris Wilson 2014-07-28 20:18:40 UTC
Created attachment 103611 [details] [review]
Fix clear shortcut in CRTC redisplay
Comment 8 Dirk Griesbach 2014-07-29 08:12:17 UTC
Yes, I confirmed it by reverting d3ccb3f3b2a3cb4c8b51d58d185dd10b85e025eb on master and the bug disappeared. Applying "Fix clear shortcut for transformations" on master solves the problem for me, too.

This also happened to solve a display glitch concerning the upper left border of the currently active window (Xfce4, see attached glitch screenshot)

Thanks,
Dirk
Comment 9 Dirk Griesbach 2014-07-29 08:16:00 UTC
Created attachment 103629 [details]
window border glitch
Comment 10 Chris Wilson 2014-07-30 05:59:34 UTC
commit 02bb0c5bc56df2790ffcd90d47d667dfd63b5407
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Jul 28 21:16:33 2014 +0100

    sna: Fix clear shortcut for transformations
    
    The region needs to be transformed along the clear shortcut when
    redisplaying the CRTC.
    
    Reported-by: Dirk Griesbach
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=81820
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


It doesn't explain the second glitch though, so please keep an eye for that reoccurring and file a bug if it does. Thanks.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.