sna: Fix clear shortcut for transformations

The region needs to be transformed along the clear shortcut when
redisplaying the CRTC.

Reported-by: Dirk Griesbach
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=81820
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>